--- a/src/SourcegraphWebApp.scss
+++ b/src/SourcegraphWebApp.scss
@@ -273,4 +273,4 @@ hr {
 @import './marketing/SurveyPage';
 @import './components/SingleValueCard';
 
-@import './extensions/extensions-client-common';
+// @import './extensions/extensions-client-common';
